[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Asteroid.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Hauler.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Laser.tscn" type="PackedScene" id=4]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=5]
[ext_resource path="res://assets/Solar System B1.png" type="Texture" id=6]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/CarvanaBlasterLevelOne.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/laser1.ogg" type="AudioStream" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Asteroid = ExtResource( 2 )
Hauler = ExtResource( 3 )
Laser = ExtResource( 4 )

[node name="AsteroidSpawnTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2( 1024, 0 )
rotation = 1.57083

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 5120, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, 304 )
texture = ExtResource( 6 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="timeout" from="AsteroidSpawnTimer" to="." method="_on_AsteroidSpawnTimer_timeout"]
